--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-material-textfield",
   "version": "0.16.1",
   "license": "BSD-3-Clause",
-  "author": "Alexander Nazarov <n4kz@n4kz.com>",
+  "author": "Alexander Nazarov <n4kz@n4kz.com>, PatLukas <https://github.com/patlukas/>",
 
   "description": "Material textfield",
   "keywords": [
@@ -25,7 +25,7 @@
 
   "repository": {
     "type": "git",
-    "url": "git://github.com/n4kz/react-native-material-textfield.git"
+    "url": "git://github.com/patlukas/react-native-material-textfield.git"
   },
 
   "dependencies": {
